; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/netfilter/extr_nf_conntrack_core.c_nf_conntrack_free.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/netfilter/extr_nf_conntrack_core.c_nf_conntrack_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nf_conn = type { i32 }
%struct.net = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @nf_conntrack_free(%struct.nf_conn* %0) #0 {
  %2 = alloca %struct.nf_conn*, align 8
  %3 = alloca %struct.net*, align 8
  store %struct.nf_conn* %0, %struct.nf_conn** %2, align 8
  %4 = load %struct.nf_conn*, %struct.nf_conn** %2, align 8
  %5 = call %struct.net* @nf_ct_net(%struct.nf_conn* %4)
  store %struct.net* %5, %struct.net** %3, align 8
  %6 = load %struct.nf_conn*, %struct.nf_conn** %2, align 8
  %7 = call i32 @nf_ct_ext_destroy(%struct.nf_conn* %6)
  %8 = load %struct.net*, %struct.net** %3, align 8
  %9 = getelementptr inbounds %struct.net, %struct.net* %8, i32 0, i32 0
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 1
  %11 = call i32 @atomic_dec(i32* %10)
  %12 = load %struct.nf_conn*, %struct.nf_conn** %2, align 8
  %13 = call i32 @nf_ct_ext_free(%struct.nf_conn* %12)
  %14 = load %struct.net*, %struct.net** %3, align 8
  %15 = getelementptr inbounds %struct.net, %struct.net* %14, i32 0, i32 0
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = load %struct.nf_conn*, %struct.nf_conn** %2, align 8
  %19 = call i32 @kmem_cache_free(i32 %17, %struct.nf_conn* %18)
  ret void
}

declare dso_local %struct.net* @nf_ct_net(%struct.nf_conn*) #1

declare dso_local i32 @nf_ct_ext_destroy(%struct.nf_conn*) #1

declare dso_local i32 @atomic_dec(i32*) #1

declare dso_local i32 @nf_ct_ext_free(%struct.nf_conn*) #1

declare dso_local i32 @kmem_cache_free(i32, %struct.nf_conn*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
